test/should-fail/vsgc2244.f3
/*
 * @test/compile-error
 */
var f:function () = [2];
